TASK: Test against PHP 8

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": ["MIT"],
 
     "require": {
-        "php": "^7.2",
+        "php": "^7.2 || ^8.0",
 
         "ext-zlib": "*",
         "ext-SPL": "*",
@@ -14,19 +14,19 @@
         "ext-reflection": "*",
         "ext-xml": "*",
 
-        "neos/cache": "~6.2.0",
-        "neos/eel": "~6.2.0",
-        "neos/error-messages": "~6.2.0",
-        "neos/utility-arrays": "~6.2.0",
-        "neos/utility-files": "~6.2.0",
-        "neos/utility-mediatypes": "~6.2.0",
-        "neos/utility-objecthandling": "~6.2.0",
-        "neos/utility-opcodecache": "~6.2.0",
-        "neos/utility-schema": "~6.2.0",
-        "neos/utility-unicode": "~6.2.0",
-        "neos/fluid-adaptor": "~6.2.0",
-        "neos/flow-log": "~6.2.0",
-        "neos/http-factories": "~6.2.0",
+        "neos/cache": "*",
+        "neos/eel": "*",
+        "neos/error-messages": "*",
+        "neos/utility-arrays": "*",
+        "neos/utility-files": "*",
+        "neos/utility-mediatypes": "*",
+        "neos/utility-objecthandling": "*",
+        "neos/utility-opcodecache": "*",
+        "neos/utility-schema": "*",
+        "neos/utility-unicode": "*",
+        "neos/fluid-adaptor": "*",
+        "neos/flow-log": "*",
+        "neos/http-factories": "*",
 
         "psr/http-message": "^1.0",
         "psr/http-factory": "^1.0",
@@ -45,7 +45,7 @@
         "symfony/console": "^4.2",
 
         "neos/composer-plugin": "^2.0",
-        "neos/utility-pdo": "~6.2.0",
+        "neos/utility-pdo": "*",
 
         "composer/composer": "^1.9"
     },
