--- a/Configuration/Objects.yaml
+++ b/Configuration/Objects.yaml
@@ -251,6 +251,10 @@ Psr\Http\Message\UploadedFileFactoryInterface:
 Psr\Http\Message\UriFactoryInterface:
   className: Neos\Http\Factories\UriFactory
 
+Psr\Http\Message\ServerRequestInterface:
+  factoryObjectName: Neos\Flow\Http\ActiveServerRequestProvider
+  factoryMethodName: getActiveServerRequest
+
 Neos\Flow\Http\Component\ComponentContext:
   arguments:
     1:
