--- a/Configuration/Objects.yaml
+++ b/Configuration/Objects.yaml
@@ -252,8 +252,8 @@ Psr\Http\Message\UriFactoryInterface:
   className: Neos\Http\Factories\UriFactory
 
 Psr\Http\Message\ServerRequestInterface:
-  factoryObjectName: Neos\Flow\Http\ActiveServerRequestProvider
-  factoryMethodName: getActiveServerRequest
+  factoryObjectName: Neos\Flow\Http\ActiveHttpRequestProvider
+  factoryMethodName: getActiveHttpRequest
 
 Neos\Flow\Http\Component\ComponentContext:
   arguments:
