TASK: Add Objects.yaml registration for DBAL Connection

--- a/Configuration/Objects.yaml
+++ b/Configuration/Objects.yaml
@@ -367,6 +367,10 @@ Doctrine\ORM\EntityManagerInterface:
   scope: singleton
   factoryObjectName: Neos\Flow\Persistence\Doctrine\EntityManagerFactory
 
+Doctrine\DBAL\Connection:
+  scope: singleton
+  factoryObjectName: Neos\Flow\Persistence\Doctrine\ConnectionFactory
+
 Neos\Flow\Persistence\PersistenceManagerInterface:
   className: Neos\Flow\Persistence\Doctrine\PersistenceManager
 
