BUGFIX: Set correct position for flashMessages component

--- a/Configuration/Settings.Http.yaml
+++ b/Configuration/Settings.Http.yaml
@@ -71,7 +71,7 @@ Neos:
         'postprocess':
           chain:
             'flashMessages':
-              position: 'before setSessionCookie'
+              position: 'start'
               component: 'Neos\Flow\Mvc\FlashMessage\FlashMessageComponent'
             'poweredByHeader':
               component: 'Neos\Flow\Http\Component\PoweredByComponent'
