BUGFIX: Fix preprocess chain

--- a/Configuration/Settings.Http.yaml
+++ b/Configuration/Settings.Http.yaml
@@ -44,7 +44,7 @@ Neos:
 
         'preprocess':
           position: 'before process'
-          chain:
+          chain: []
         'process':
           chain:
             'routing':
