FEATURE: Move SetHeader, ReplaceHttpResponse, PrepareMvcRequest and DispatchComponent to a single middleware

--- a/Configuration/Settings.Http.yaml
+++ b/Configuration/Settings.Http.yaml
@@ -52,7 +52,7 @@ Neos:
           middleware: 'Neos\Flow\Http\Middleware\SecurityEntryPointMiddleware'
         'dispatch':
           position: 'end'
-          middleware: 'Neos\Flow\Http\Middleware\ComponentChainMiddleware'
+          middleware: 'Neos\Flow\Mvc\DispatchMiddleware'
 
       # Defines the workflow of one request from bootstrap to the HTTP response
       #
@@ -64,15 +64,7 @@ Neos:
           position: 'before process'
           chain: []
         'process':
-          chain:
-            'dispatching':
-              component: 'Neos\Flow\Mvc\DispatchComponent'
-            'replaceHttpResponse':
-              position: 'after dispatching'
-              component: 'Neos\Flow\Http\Component\ReplaceHttpResponseComponent'
-            'setHeader':
-              position: 'after dispatching'
-              component: 'Neos\Flow\Http\Component\SetHeaderComponent'
+          chain: []
 
         'postprocess':
           chain: []
