--- a/Configuration/Settings.Http.yaml
+++ b/Configuration/Settings.Http.yaml
@@ -30,6 +30,7 @@ Neos:
           position: 'start'
           middleware: 'Neos\Flow\Http\Middleware\TrustedProxiesMiddleware'
         'routing':
+          # needs to be "after trustedProxies" because AjaxWidget comes "before routing" but still needs to be after trustedProxies
           position: 'after trustedProxies'
           middleware: 'Neos\Flow\Mvc\Routing\RoutingMiddleware'
         'standardsCompliance':
