--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "psr/http-server-middleware": "^1.0",
         "psr/http-server-handler": "^1.0",
 
-        "ramsey/uuid": "^3.0",
+        "ramsey/uuid": "^3.0 || ^4.0",
 
         "doctrine/orm": "^2.7",
         "doctrine/migrations": "^3.0",
