TASK: Remove Flow dependency on neos/fluid-adaptor (again)
See also https://github.com/neos/flow-development-collection/pull/2324#issuecomment-743219873

--- a/composer.json
+++ b/composer.json
@@ -50,8 +50,7 @@
 
         "composer/composer": "^1.9 || ^2.0",
 
-        "egulias/email-validator": "^2.1",
-        "neos/fluid-adaptor": "~7.0.0"
+        "egulias/email-validator": "^2.1"
     },
     "require-dev": {
         "vimeo/psalm": "~4.1.1"
