--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
 
         "composer/composer": "^1.9 || ^2.0",
 
-        "egulias/email-validator": "^2.1"
+        "egulias/email-validator": "^2.1 || ^3.0"
     },
     "require-dev": {
         "vimeo/psalm": "~4.1.1"
