BUGFIX: Prevent recursive instanciation of EntityManager
With the changes in #2423 the PersistenceManager was registered as a Doctrine EventListener.
Hence, when building the EntityManager, the PersistenceManager got instanciated with a completely new non-lazy EntityManager. This caused errors when trying to persist entities, as they were not known to that instance of the EntityManager.
This change extracts the EventListener behaviour from the PersistenceManager.

--- a/Configuration/Settings.Persistence.yaml
+++ b/Configuration/Settings.Persistence.yaml
@@ -38,9 +38,9 @@ Neos:
         # See Flow manual, chapter "Persistence" for further information on how to subscribe to Doctrine events.
         eventSubscribers: []
         eventListeners:
-          'Neos\Flow\Persistence\Doctrine\PersistenceManager':
+          'Neos\Flow\Persistence\Doctrine\AllowedObjectsListener':
             events: ['onFlush']
-            listener: 'Neos\Flow\Persistence\Doctrine\PersistenceManager'
+            listener: 'Neos\Flow\Persistence\Doctrine\AllowedObjectsListener'
           'Neos\Flow\Persistence\Doctrine\ObjectValidationAndDeDuplicationListener':
             events: ['onFlush']
             listener: 'Neos\Flow\Persistence\Doctrine\ObjectValidationAndDeDuplicationListener'
