--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "doctrine/migrations": "^1.8",
         "doctrine/dbal": "^2.9",
         "doctrine/common": "^2.4",
+        "doctrine/persistence": "^1.3",
 
         "symfony/yaml": "^4.2",
         "symfony/dom-crawler": "^4.2",
