--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,8 @@
 
         "doctrine/orm": "^2.9.3",
         "doctrine/migrations": "^3.0",
-        "doctrine/dbal": "^2.12",
-        "doctrine/common": "^2.13.1 || ^3.0",
+        "doctrine/dbal": "^2.13",
+        "doctrine/common": "^3.0.3",
 
         "symfony/yaml": "^5.1",
         "symfony/dom-crawler": "^5.1",
