--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "doctrine/migrations": "^3.0",
         "doctrine/dbal": "^2.12",
         "doctrine/common": "^2.13.1 || ^3.0",
+        "doctrine/annotations": "^1.12",
 
         "symfony/yaml": "^5.1",
         "symfony/dom-crawler": "^5.1",
