--- a/Resources/Private/Installer/Distribution/Defaults/.editorconfig
+++ b/Resources/Private/Installer/Distribution/Defaults/.editorconfig
@@ -1,15 +1,26 @@
+# editorconfig.org
 root = true
 
 [*]
+indent_style = space
+indent_size = 2
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
-indent_style = space
+
+# PHP should follow the PSR-2 standard
+[*.php]
 indent_size = 4
 
-[*.yaml]
-indent_size = 2
+# JS should use tabs, to reduce conflicts
+[*.js]
+indent_style = tab
 
-[*.md]
-trim_trailing_whitespace = false
+# SASS should use tabs, to reduce conflicts
+[*.scss]
+indent_style = tab
+
+# HTML should use tabs, to reduce conflicts
+[*.html]
+indent_style = tab
